--- a/style.css
+++ b/style.css
@@ -49,3 +49,43 @@ button{
 .yellow_black{
     background-color: #F3D250;
 }
+
+.btn_container{
+    height: 100vh;
+    background-color: #272727;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.btn{
+    height: 60px;
+    width: 120px;
+    color: white;
+    text-align: center;
+    line-height: 55px;
+    border: 1px solid #FF652F;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+    transition: all 1s;
+    font-family: fantasy;
+    
+}
+.btn::before{
+    content: '';
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #FF652F;
+    width: 0%;
+    z-index: -1;
+    transition: all 1s;
+}
+.btn:hover::before{
+    width: 100%;
+    
+}
+.btn:hover{
+    color: #272727;
+}
